Task #32615 - fix for Conforming/Non-Conforming rows + table header alignment

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1298,6 +1298,10 @@ i.file {
             border-top-right-radius: 4px;
           }
 
+          .ui.checkbox {
+            vertical-align: top;
+          }
+
           .sortable,
           .justify-content-start .sortable,
           .justify-content-center .sortable,
